--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,6 +6,13 @@
     "configurations": [
         {
             "type": "java",
+            "name": "Launch HelloWorld",
+            "request": "launch",
+            "mainClass": "HelloWorld",
+            "projectName": "oops_db6bd9c3"
+        },
+        {
+            "type": "java",
             "name": "Launch CountCholate",
             "request": "launch",
             "mainClass": "CountCholate",
